# silent-agent

./: .browser_id  .claudeignore  .gitignore  .ws_endpoint  CHANGELOG.md  CLAUDE.md  PUPPETEER_STARTER_TUTORIAL.md  README.md  SERVICES_STARTUP.md  cursor_automating_rpa_process_developme.md  package-lock.json  package.json  pyproject.toml  requirements.txt  start_browser.js  start_puppeteer.py  start_services.py  test_a11y_tree.py  test_api.sh  test_browser_client.py  tests_api.py  tests_api_README.md  tests_xiaohongshu.py  todos.md  todos_v2.md  todos_v3.md  todos_v4.md  todos_v5.md
.claude/: neurone_project_summary.md
.claude/rule/: api.md  browser.md  rpa_development.md  testing.md
business_rpa_tests/: tests_xianyu.py  tests_xiaohongshu.py
docs/: ARCHITECTURE_ANALYSIS_REPORT.md  BUSINESS_FLOW.md  RPA_TOOL_DEVELOPMENT_GUIDE.md  TOOL_REGISTER_AUTO_MIGRATION_PLAN.md  businesstool_refactor_plan.md  migration_task_list.md  架构分析报告.md
doubao_rpa_runs/: auto_doubao_chat.js  doubao-chat.js  doubao_chat_result.json  doubao_qrcode_login.js
extension/: background.js  cdp_adapter.js  event_listener.js  manifest.json  options.html  options.js  popup.html  popup.js
extension/icons/: generate_icons.py
rpa_dev/doubao_rpa_runs/: doubao-chat.js  doubao_qrcode_login.js
rpa_dev/xianyu_rpa_runs/: publish_item.js  search_results.json
src/: browser_check.py  cdp_client.py  config.py  demo.py  install_host.py  native_host_manifest.json  neuron.py  relay_client.py  relay_server.py
src/api/: __init__.py  (+1 more)
xianyu_rpa_runs/: README.md  publish_operations.json  search_item.js
(+207 files in other folders)
