[project]
name = "silent-agent"
version = "1.1.0"
description = "浏览器智能代理控制系统 - 隐秘无感的 Chrome 扩展自动化控制"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
puppeteer = [
    "puppeteer>=7.0.0",
    "puppeteer-extra>=3.0.0",
    "puppeteer-extra-plugin-stealth>=2.9.0",
]
dev = [
    "pillow>=10.0",  # 用于生成图标
]

[project.scripts]
silent-agent-relay = "python.relay_server:main"
silent-agent-api = "python.api.app:main"
